--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  location: ^4.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
